<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/register"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?android:attr/homeAsUpIndicator"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/field_username"
                android:backgroundTint="@color/border"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/field_email"
                android:backgroundTint="@color/border"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/field_phone"
                android:backgroundTint="@color/border"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Male"/>

                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Female"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/fieldBloodType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/border"
                    style="@android:style/Widget.Material.Spinner.Underlined"
                    />
                <Spinner
                    android:id="@+id/fieldReshus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/border"
                    style="@android:style/Widget.Material.Spinner.Underlined"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/field_password"
                android:backgroundTint="@color/border"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/field_repassword"
                android:backgroundTint="@color/border"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_personal"/>

                <RadioButton
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_organziation"/>
            </RadioGroup>
            <Spinner
                android:id="@+id/fieldJob"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/border"
                style="@android:style/Widget.Material.Spinner.Underlined"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/field_home_addr"
                android:backgroundTint="@color/border"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/field_default_loc"
                android:drawableRight="@drawable/ic_blood_needed_location"
                android:backgroundTint="@color/border"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_aggreement"
                android:textColor="@color/desc"/>
            <Button
                android:id="@+id/btnRegister"
                android:onClick="register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/btn_dark"
                android:background="@drawable/btn_outline_dark"
                android:text="@string/register"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                style="@style/Theme.Bloodshare.Borderless" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>